added another tag Email and attribute mailto and title

--- a/index.html
+++ b/index.html
@@ -39,14 +39,19 @@
 
     <div class="social-links">
         <h1>Connect with me</h1>
-        <a href="https://github.com/suhailult777" target="_blank" aria-label="GitHub">
+        <a href="https://github.com/suhailult777" target="_blank" aria-label="GitHub" title="GitHub">
             <i class="fa-brands fa-github"></i>
         </a>
-        <a href="https://x.com/Sidrisi786" target="_blank" aria-label="Twitter/X">
+        <a href="https://x.com/Sidrisi786" target="_blank" aria-label="Twitter/X" title="Twitter/X">
             <i class="fa-brands fa-twitter"></i>
         </a>
-        <a href="https://www.linkedin.com/in/mohammad-suhail-idrisi-726889223/" target="_blank" aria-label="LinkedIn">
+        <a href="https://www.linkedin.com/in/mohammad-suhail-idrisi-726889223/" target="_blank" aria-label="LinkedIn"
+            title="LinkedIn">
             <i class="fa-brands fa-linkedin"></i>
+        </a>
+
+        <a href="mailto:suhailult123@gmail.com" target="_blank" aria-label="Email" title="Email">
+            <i class="fa-solid fa-envelope"></i>
         </a>
     </div>
 
